# routes/api.js
@@ -3,17 +3,27 @@ var fs = require('fs');
 var router = express.Router();
 
 MIN_J=1
-MAX_J=5
-DEFAULT_RIDDLE = {KEY: "KEY_BA_ZIN", PATH: "C:\\users\\Administrator\\Desktop\\magic.pyc"}
-
+MAX_J=4
+DEFAULT_RIDDLE = {HKEY: "AgilBzin", PATH: "Desktop/russia.exe"}
+CURR_FIRE_TIME_SECONDS = null;
+TIME_DIFF_SECONDS = 300
 
 router.get('/riddleMeThis', function(req, res) {
-    return res.json(DEFAULT_RIDDLE);    
+    res.json(DEFAULT_RIDDLE);    
 });
     
-router.get('/fireItUp', function(req, res) {    
-    var j_num = Math.random() * (MAX_J - MIN_J) + MIN_J;
-    return res.json({count: j_num});
+router.get('/fireItUp', function(req, res) {
+    const now = parseInt(new Date().getTime() / 1000);
+    const left = now - CURR_FIRE_TIME_SECONDS
+    if(CURR_FIRE_TIME_SECONDS === null || left >= TIME_DIFF_SECONDS) {
+        CURR_FIRE_TIME_SECONDS = now;
+        const j_num = parseInt(Math.random() * (MAX_J - MIN_J + 1) + MIN_J);
+        console.log('Fire It up = ' + j_num);
+        res.json({SMOKE: j_num});
+    }
+    else {
+        res.json({MESSAGE: 'You can only request this once every 5 minutes, time remaining: ' + (TIME_DIFF_SECONDS - left) + 's'});
+    }
 });
 
 router.get('/climbMe', function(req, res) {
